[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/open_kanban/system/card.gd" type="Script" id=1]
[ext_resource path="res://addons/open_kanban/res/fonts/light.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/open_kanban/system/tool_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/open_kanban/res/boxes/inner_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/open_kanban/system/drag_component.gd" type="Script" id=5]
[ext_resource path="res://addons/open_kanban/res/boxes/inner.tres" type="StyleBox" id=6]
[ext_resource path="res://addons/open_kanban/res/fonts/regular.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/open_kanban/system/line_edit.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/open_kanban/res/others/card.tres" type="ShortCut" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id=5]

[node name="card" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )
script = ExtResource( 1 )

[node name="drag" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
shortcut_in_tooltip = false
shortcut = ExtResource( 9 )
script = ExtResource( 5 )

[node name="panel" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 191, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="card_title" parent="panel" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_fonts/font = ExtResource( 7 )

[node name="title" type="Label" parent="panel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
valign = 1
autowrap = true

[node name="rect" type="Control" parent="."]
margin_top = 552.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_vertical = 8

[connection signal="button_up" from="drag" to="." method="title_edit"]
[connection signal="focus_exited" from="panel/card_title" to="." method="_on_card_title_text_entered"]
[connection signal="text_entered" from="panel/card_title" to="." method="_on_card_title_text_entered"]
